<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_check_circle"
        android:title="@string/action_select_all"
        app:showAsAction="always" />
    <group
        android:id="@+id/group_actions"
        android:visible="true">
        <item
            android:id="@+id/action_consumed"
            android:icon="@drawable/ic_check_circle"
            android:title="@string/action_consumed"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_wasted"
            android:icon="@drawable/ic_circle_outline"
            android:title="@string/action_wasted"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_donated"
            android:icon="@drawable/ic_check_circle"
            android:title="@string/action_donated"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_delete_batch"
            android:icon="@drawable/ic_circle_outline"
            android:title="@string/delete_confirm"
            app:showAsAction="always" />
    </group>
</menu>
